--- a/src/components/Referral/ReferralList/referral_list.module.scss
+++ b/src/components/Referral/ReferralList/referral_list.module.scss
@@ -73,6 +73,7 @@
   & .referralList__content{
     width: 100%;
     display: grid;
+    min-height: 150px;
     grid-template-rows: 65px;
     grid-gap: 10px;
     //& > div{
