--- a/src/components/Referral/referral.module.scss
+++ b/src/components/Referral/referral.module.scss
@@ -13,11 +13,11 @@
   padding: 32px;
 }
 
-.referralBlock{
+.referralTitle{
   @include flex-space-center();
   width: 100%;
   margin-bottom: 30px;
-  & .referralBlock__button{
+  & .button{
     @include clear();
     @include flex-center();
     cursor: pointer;
@@ -50,7 +50,7 @@
       opacity: 0;
       left: 2px;
     }
-    &.message{
+    &.button_with_message{
       &::after{
         z-index: 2;
         opacity: 1;
@@ -68,27 +68,27 @@
       & svg{
         transform: scale(1.15);
       }
-      & .referralBlock__button_blue{
+      & .button_text_blue{
         text-decoration: underline;
       }
     }
-    & .referralBlock__button_blue{
+    & .button_text_blue{
       @include font-setter(normal,600, 16px, 18px, #2E76CB);
     }
   }
-  & .referralBlock__links{
+  & .referralTitle__links{
     & > button:last-child{
       margin-right: 0;
     }
   }
-  & .referralBlock__link{
+  & .link{
     @include clear();
     padding-bottom: 10px;
     margin-right: 30px;
     @include font-setter(normal,500, 16px, 18px, #303030);
     position: relative;
     cursor: pointer;
-    &.active{
+    &.link_active{
       @include font-setter(normal,600, 16px, 18px, #303030);
       &::before{
         position: absolute;
@@ -106,10 +106,10 @@
 }
 
 @media all and (max-width: 1200px) and (min-width: 801px) {
-  .referralBlock{
+  .referralTitle{
     flex-direction: column;
     align-items: flex-start !important;
-    & .referralBlock__button{
+    & .button{
       margin-top: 15px;
     }
   }
@@ -120,9 +120,9 @@
   .referral{
     padding: 15px !important;
   }
-  .referralBlock{
+  .referralTitle{
     flex-direction: column-reverse;
-    & .referralBlock__button{
+    & .button{
       width: 100%;
       height: 40px;
       background: #FFFFFF;
@@ -152,7 +152,7 @@
         top: -20px;
       }
     }
-    & .referralBlock__links{
+    & .referralTitle__links{
       width: 100%;
       @include flex-start();
       align-items: center;
